monitor-query stream-style serialization